# project-template

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: Functions.cmake  UseDoxygenDoc.cmake
doc/html/: annotated.html  capi_8h.html  capi_8h_source.html  classes.html  classlibrary_t_1_1utiles_1_1_math-members.html  classlibrary_t_1_1utiles_1_1_math.html  dir_780d2d2e7376bb6a538e56793fa374be.html  dir_799d096e8a0529c733e385e524443b3d.html  dir_b7aabcc3fd30aa1af25f5f1c4d5b039d.html  dir_ba0eec4e157dabd6f1eebb718885c70c.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  namespacelibrary_t.html  namespacelibrary_t_1_1utiles.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespaces.html  structlibrary_t_1_1utiles_1_1_point-members.html  structlibrary_t_1_1utiles_1_1_point.html  utiles_8cpp.html  utiles_8h.html  utiles_8h_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js
doc/rtf/: dir_780d2d2e7376bb6a538e56793fa374be.rtf  dir_799d096e8a0529c733e385e524443b3d.rtf  dir_b7aabcc3fd30aa1af25f5f1c4d5b039d.rtf  dir_ba0eec4e157dabd6f1eebb718885c70c.rtf  refman.rtf
libraryT/: CMakeLists.txt
libraryT/include/libraryT/: capi.h  common.h  utiles.h  utils.h  version.h.ini
libraryT/src/: config.cpp  utiles.cpp  utils.cpp
sample/: CMakeLists.txt  main.cpp
swig/: CMakeLists.txt
swig/java/: CMakeLists.txt  sample.i
test/: CMakeLists.txt  gtest_utiles.cpp
test/cpp/: CMakeLists.txt  gtest_utiles.cpp
test/gauge/java/src/test/java/: DllManager.java  StepImplementation.java
test/gauge/specs/: example.spec
